<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.fatdino.blabrrr.ui.login.LoginActivityViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ibBack"
            style="@style/ButtonBackArrowWhite"
            android:layout_margin="@dimen/padding" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                    android:id="@+id/txtIntro"
                    style="@style/TextWhite.Big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_welcome" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:hint="@string/username"
                    android:padding="@dimen/padding_inputtext"
                    android:theme="@style/TextInputLayoutAppearance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUsername"
                        style="@style/TextInputEditTextAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@={viewModel.username}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:hint="@string/password"
                    android:padding="@dimen/padding_inputtext"
                    android:theme="@style/TextInputLayoutAppearance"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        style="@style/TextInputEditTextAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_marginRight="@dimen/padding"
            android:layout_marginBottom="@dimen/padding_big2"
            android:text="@string/login" />

        <ImageView
            android:id="@+id/ivFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bg_loginregister" />
    </LinearLayout>
</layout>